# FachuanHybridSystem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEV_CHANGELOG.md  GIT_SYNC.md  INSTALL.md  LICENSE  Makefile  README.md
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  .secrets.baseline  .secrets.baseline.new  Dockerfile  Makefile  conftest.py  docker-compose.yml  docker-entrypoint.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
backend/apiSystem/: check_config.py  manage.py
backend/apiSystem/apiSystem/: admin_customization.py  api.py  asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
backend/apiSystem/templates/: index.html
backend/apps/: __init__.py
backend/apps/automation/: README.md  apps.py  checks.py  dtos.py  exceptions.py  signals.py  tasks.py
backend/apps/batch_printing/: __init__.py  apps.py  models.py  schemas.py  tasks.py
backend/apps/cases/: README.md  __init__.py  apps.py  dependencies.py  exceptions.py  models.py  models.pyi  schemas.py  signals.py  utils.py  validators.py
backend/apps/chat_records/: README.md  __init__.py  apps.py  schemas.py  signals.py  tasks.py
backend/apps/client/: README.md  apps.py  schemas.py  signals.py  tasks.py
backend/apps/contacts/: admin.py
backend/apps/content_ops/: tasks.py
backend/apps/contract_review/: apps.py  tasks.py
backend/apps/contracts/: README.md  apps.py  signals.py  validators.py
backend/apps/core/: README.md  __init__.py  apps.py
backend/apps/doc_convert/: __init__.py  apps.py  constants.py  exceptions.py  models.py
backend/apps/document_recognition/: __init__.py  apps.py  models.py  tasks.py
backend/apps/documents/: README.md  __init__.py  apps.py  models.pyi  schemas.py  signals.py  storage.py  tasks.py
backend/apps/enterprise_data/: README.md  __init__.py  apps.py
backend/apps/evidence/: apps.py  schemas.py  signals.py  tasks.py
backend/apps/evidence_sorting/: apps.py  schemas.py
backend/apps/express_query/: __init__.py  api.py  apps.py  models.py  signals.py  tasks.py
backend/apps/fee_notice/: __init__.py  apps.py  models.py
backend/apps/finance/: __init__.py  apps.py  tasks.py
backend/apps/image_rotation/: __init__.py  apps.py  models.py
backend/apps/invoice_recognition/: __init__.py  apps.py  models.py
backend/apps/legal_research/: __init__.py  apps.py  tasks.py
backend/apps/legal_solution/: apps.py  tasks.py
backend/apps/litigation_ai/: README.md  apps.py  dependencies.py  routing.py
backend/apps/message_hub/: __init__.py  apps.py  schemas.py  tasks.py
backend/apps/oa_filing/: apps.py  tasks.py
backend/apps/organization/: README.md  apps.py  dtos.py  forms.py  middleware.py  schemas.py  views.py
backend/apps/pdf_splitting/: __init__.py  apps.py  models.py  tasks.py
backend/apps/preservation_date/: __init__.py  apps.py  models.py
backend/apps/reminders/: README.md  apps.py  models.py  schemas.py
backend/apps/sales_dispute/: apps.py
backend/apps/story_viz/: admin.py  api.py  apps.py  models.py  schemas.py  tasks.py
backend/apps/testing/: __init__.py  factories.py
backend/apps/wechat_mp/: admin.py
backend/apps/workbench/: __init__.py  apps.py  tasks.py
backend/devtools/: changed_files.sh  security_guard.py
backend/mcp_server/: __main__.py  client.py  config.py  server.py
backend/mcp_server/tools/: __init__.py
backend/plugins/: __init__.py
backend/plugins/court_automation/: __init__.py
backend/plugins/court_filing_http/: __init__.py
backend/templates/emails/: password_changed.html
backend/tests/: __init__.py
(+2723 files in other folders)
